--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -112,6 +112,7 @@
     "bull": "4.16.4",
     "cache-manager": "5.2.3",
     "change-case": "4.1.2",
+    "cheerio": "^1.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "compression": "1.8.1",
