--- a/packages/@n8n/task-runner/package.json
+++ b/packages/@n8n/task-runner/package.json
@@ -45,7 +45,8 @@
     "n8n-core": "workspace:*",
     "n8n-workflow": "workspace:*",
     "nanoid": "catalog:",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+      "cheerio": "^1.0.0"
   },
   "devDependencies": {
     "@n8n/typescript-config": "workspace:*",
